welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:5: error: '(' expected but identifier found.
if cond (a) {nb = nb + 1}
   ^countTeen:6: error: '(' expected but identifier found.
if cond (b) {nb = nb + 1}
   ^countTeen:7: error: '(' expected but identifier found.
if cond (c) {nb = nb + 1}
   ^countTeen:8: error: '(' expected but identifier found.
if cond (d) {nb = nb + 1}
   ^